--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>🤪 Farhan personal website</title>
+  <style>
+  body{
+    background-color: Blue;
+  }
+
+  </style>
 </head>
 
 <body>
