--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>🤪 Farhan personal website</title>
   <style>
   body{
-    background-color: yellow;
+    background-color: green;
   }
 
   </style>
